--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-binaryen = {version = "0.12.1", git = "https://github.com/second-state/binaryen-rs.git", branch = "feat/multi-memories-asyncify"}
-wasmedge-sdk = "0.1"
-wasmedge-sys = "0.7"
-wasmedge-types = "0.1"
+binaryen = {version = "0.12.1", git = "https://github.com/second-state/binaryen-rs.git", branch = "feat/multi-memories-asyncify" }
+wasmedge-sdk = { version = "0.2", path = "../WasmEdge/bindings/rust/wasmedge-sdk" }
+wasmedge-sys = { version = "0.8", path = "../WasmEdge/bindings/rust/wasmedge-sys" }
+wasmedge-types = "0.2"
 waker-fn = "1"
 chrono = "0.4"
 
