--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 
 [dependencies]
 binaryen = {version = "0.12.1", git = "https://github.com/second-state/binaryen-rs.git", branch = "feat/multi-memories-asyncify" }
-wasmedge-sdk = { version = "0.2", path = "../WasmEdge/bindings/rust/wasmedge-sdk" }
-wasmedge-sys = { version = "0.8", path = "../WasmEdge/bindings/rust/wasmedge-sys" }
+wasmedge-sdk = { version = "0.3" }
+wasmedge-sys = { version = "0.8" }
 wasmedge-types = "0.2"
 waker-fn = "1"
 chrono = "0.4"
